<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentalConditionFragment"
    android:background="@drawable/background"
    android:scaleType="centerCrop">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="이용약관"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="350dp"
                android:layout_height="103dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/user_condition1"
                android:textSize="19sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/user_condition2"
                android:textSize="17sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="73dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/user_condition3"
                android:textSize="17sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/user_condition4"
                android:textSize="17sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="78dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/user_condition5"
                android:textSize="17sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/condition5_a"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/condition5_b"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/condition5_c"
                android:textAlignment="center"
                android:textSize="17sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/user_condition6"
                android:textSize="17sp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="74dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/user_condition7"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewlast"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:text="@string/user_condition8"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rental_agree"
                    android:layout_width="185dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="#87878787"
                    android:text="동의하고 대여하기"
                    android:textColor="#FFFFFF" />

                <Button
                    android:layout_width="185dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="#87878787"
                    android:text="동의하지 않음(서비스 이용 불가)"
                    android:textColor="#FFFFFF" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>