<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".PayFragment"
    android:scaleType="centerCrop"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <Button
            android:id="@+id/button"
            android:layout_width="203dp"
            android:layout_height="60dp"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="199dp"

            android:backgroundTint="#1F68D6"
            android:fontFamily="@font/nanum_square_round_otf_eb"
            android:text="결제하기"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_bias="0.608"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_default="wrap" />

        <View
            android:id="@+id/textView2"
            android:layout_width="354dp"
            android:layout_height="191dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="43dp"
            android:background="@drawable/border"
            android:inputType="textMultiLine"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="195dp"
            android:layout_height="41dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="32dp"
            android:background="#D9D9D9"
            app:layout_constraintLeft_toRightOf="@+id/time_out_btn"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="MissingConstraints" />

        <!--        app:layout_constraintHorizontal_bias="0.533"-->

        <TextView
            android:id="@+id/textView7"
            android:layout_width="196dp"
            android:layout_height="43dp"
            android:layout_marginTop="60dp"
            android:background="#D9D9D9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintRight_toRightOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:ignore="MissingConstraints" />

        <!--            android:layout_width="256dp"-->
        <!--            android:layout_height="187dp"-->

        <ImageView
            android:id="@+id/rental_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/timeout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/time_out_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="132dp"
            android:text="초과시간"
            android:textSize="20dp"
            app:layout_constraintHorizontal_bias="0.029"
            app:layout_constraintLeft_toLeftOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:text="요금 발생 기간"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:ignore="MissingConstraints" />

<!--        <ImageView-->
<!--            android:id="@+id/alarm"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:layout_marginEnd="10dp"-->
<!--            android:layout_marginStart="292dp"-->
<!--            android:src="@drawable/alarm_img"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/menu_icon"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--             />-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->

<!--        <ImageView-->
<!--            android:id="@+id/menu_icon"-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:layout_marginEnd="30dp"-->
<!--            android:layout_marginStart="356dp"-->
<!--            android:src="@drawable/menu_img"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--             />-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->

        <TextView
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_time"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            app:layout_constraintRight_toRightOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            android:textSize="17dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/end_time"
            app:layout_constraintHorizontal_bias="0.787"
            app:layout_constraintLeft_toLeftOf="@+id/textView7"
            app:layout_constraintRight_toRightOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            android:textSize="17dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/time_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/time_over"
            android:textSize="17dp"
            app:layout_constraintHorizontal_bias="0.326"
            app:layout_constraintLeft_toLeftOf="@+id/textView"
            app:layout_constraintRight_toRightOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <com.google.android.material.navigation.NavigationView-->
<!--            android:id="@+id/home_navigation"-->
<!--            android:layout_width="250dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_gravity="end"-->
<!--            app:menu="@menu/menu_navigation"-->
<!--            app:headerLayout="@layout/navigation_header"-->
<!--            android:background="#96C9E5" />-->

<!--</androidx.drawerlayout.widget.DrawerLayout>-->
